--- a/src/main/webapp/todolist.zul
+++ b/src/main/webapp/todolist.zul
@@ -1,10 +1,10 @@
 <?link rel="stylesheet" type="text/css" href="/style.css"?>
 <window viewModel="@id('vm') @init('org.zkoss.mvvm.TodoListViewModel')"
         border="normal" width="60%" vflex="1" style="margin:auto" contentStyle="overflow:auto;">
-    <caption label="ToDo List" iconSclass="z-icon-list-alt" />
+    <caption label="My ToDo List" iconSclass="z-icon-list-alt" />
     <vlayout hflex="1" vflex="1">
         <hlayout hflex="1">
-            <textbox value="@bind(vm.subject)" onOK="@command('addTodo')" hflex="1" placeholder="What needs to be done?" />
+            <textbox value="@bind(vm.subject)" onOK="@command('addTodo')" hflex="1" placeholder="@load(vm.hint)" />
             <button onClick="@command('addTodo')" iconSclass="z-icon-plus-square" />
         </hlayout>
         <listbox model="@init(vm.todoListModel)" vflex="1">
