--- a/src/main/webapp/todolist.zul
+++ b/src/main/webapp/todolist.zul
@@ -1,25 +1,25 @@
 <?link rel="stylesheet" type="text/css" href="/style.css"?>
 <window viewModel="@id('vm') @init('org.zkoss.mvvm.TodoListViewModel')"
-        border="normal" width="60%" vflex="1" style="margin:auto" contentStyle="overflow:auto;">
+        border="normal" width="60%" vflex="1" style="margin:auto" >
     <caption label="My ToDo List" iconSclass="z-icon-list-alt" />
     <vlayout hflex="1" vflex="1">
         <hlayout hflex="1">
-            <textbox value="@bind(vm.subject)" onOK="@command('addTodo')" hflex="1" placeholder="@load(vm.hint)" />
+            <textbox value="@bind(vm.subject)" onOK="@command('addTodo')" hflex="1" placeholder="What needs to be done?" />
             <button onClick="@command('addTodo')" iconSclass="z-icon-plus-square" />
         </hlayout>
         <listbox model="@init(vm.todoListModel)" vflex="1">
             <listhead>
-                <listheader hflex="min"/>
-                <listheader/>
-                <listheader hflex="min"/>
+                <listheader hflex="min"/>   <!-- checkbox -->
+                <listheader/>               <!-- TO-DO item -->
+                <listheader hflex="min"/>   <!-- delete button -->
             </listhead>
             <template name="model">
                 <listitem sclass="@load(each.complete?'complete-todo':'')">
                     <listcell>
-                        <checkbox checked="@bind(each.complete)" onCheck="@command('completeTodo',todo=each)"/>
+                        <checkbox checked="@init(each.complete)@save(each.complete)" onCheck="@command('completeTodo',todo=each)"/>
                     </listcell>
                     <listcell>
-                        <textbox value="@bind(each.subject)" inplace="true" width="100%" onChange="@command('updateTodo', todo=each)"/>
+                        <textbox value="@init(each.subject)@save(each.subject)" inplace="true" width="100%" onChange="@command('updateTodo', todo=each)"/>
                     </listcell>
                     <listcell>
                         <button onClick="@command('deleteTodo',todo=each)" iconSclass="z-icon-times"/>
