--- a/src/main/webapp/shadow/profileEditor.zul
+++ b/src/main/webapp/shadow/profileEditor.zul
@@ -1,12 +1,19 @@
 <zk xmlns:n="native">
     <div viewModel="@id('vm')@init('org.zkoss.mvvm.shadow.ProfileEditorVM')" style="width: 20%; margin:20px 0px 0px 20px">
         <button label="@load(vm.edit? 'Done' : 'Edit')" onClick="@command('toggle')"/>
-        <groupbox hflex="min" style="margin:auto; text-align:center">
+        <window hflex="min" style="margin:auto; text-align:center">
             <vlayout >
                 <n:i class="z-icon-user" style="font-size:72px; color: #0cafac"/>
                 <apply template="@load(vm.edit?'edit':'normal')"/>
             </vlayout>
-        </groupbox>
+        </window>
+        <separator height="50px"/>
+        <window border="normal" hflex="min" style="margin:auto; text-align:center">
+            <vlayout >
+                <n:i class="z-icon-user" style="font-size:72px; color: #0cafac"/>
+                <apply templateURI="profileDisplay.zul" person="@init(vm.person)"/>
+            </vlayout>
+        </window>
     </div>
 
     <template name="normal">
